# linreg

./: .gitignore  CMakeLists.txt  README.md
e2e/: main.py  pyproject.toml
include/linreg/dto/: MessageDto.hpp
include/linreg/math/: Function.hpp
include/linreg/regression/: LinearRegression.hpp
include/linreg/structures/: Vector.hpp
lib/regression/: CMakeLists.txt  LinearRegression.cpp
src/: CMakeLists.txt  ComputeHandler.cpp  StatusHandler.cpp  main.cpp
src/dto/: DataDto.hpp
tests/: CMakeLists.txt  LinearRegressionTest.cpp  MathTest.cpp  VectorTest.cpp
